--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,8 +36,9 @@
 				  </button>
 				  <div class="collapse navbar-collapse" id="navHamburger">
 					<a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
-					<a class="nav-link js-scroll-trigger" href="/books-read">Books I've Read</a>
-					<a class="nav-link js-scroll-trigger" href="/browse-books">Browse Books</a>
+					<a class="nav-link js-scroll-trigger" href="/books/read">Books I've Read</a>
+					<a class="nav-link js-scroll-trigger" href="/books/recommendations">Recommendations</a>
+					<a class="nav-link js-scroll-trigger" href="/books">Browse Books</a>
 				  </div>
 				</nav>
 			</div>	
