--- a/views/books/book-details.ejs
+++ b/views/books/book-details.ejs
@@ -66,9 +66,9 @@
                                                     <div class="col">
                                                         <button type="button" class="btn btn-success my-1" data-toggle="modal" data-target="#confirm-publish-modal">Re-publish book</button>
                                                     </div>
-                                                    <div class="col">
+                                                    <!-- <div class="col">
                                                         <button type="button" class="btn btn-danger my-1" data-toggle="modal" data-target="#confirm-delete-modal">Delete book</button>
-                                                    </div>
+                                                    </div> -->
                                                     <!-- Modal -->
                                                     <div class="modal fade" id="confirm-publish-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-unpublish-label" aria-hidden="true">
                                                         <div class="modal-dialog">
@@ -91,7 +91,7 @@
                                                     </div>
                 
                                                     <!-- Modal -->
-                                                    <div class="modal fade" id="confirm-delete-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-delete-label" aria-hidden="true">
+                                                    <!-- <div class="modal fade" id="confirm-delete-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="confirm-delete-label" aria-hidden="true">
                                                         <div class="modal-dialog">
                                                             <div class="modal-content">
                                                             <div class="modal-header">
@@ -105,13 +105,13 @@
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                                <form action="/books/<%= currentBook.id %>/unpublish?_method=DELETE" class="delete-book" id="delete-book"  method="post">
+                                                                <form action="/books/<%#= currentBook.id %>/unpublish?_method=DELETE" class="delete-book" id="delete-book"  method="post">
                                                                     <button class="btn btn-danger my-1">Delete book</button>
                                                                 </form>
                                                             </div>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                 
                                                 <% } %>
                                             </div>
