Proof of concept for search results

--- a/views/partials/pagination.ejs
+++ b/views/partials/pagination.ejs
@@ -1,21 +1,21 @@
 <div class="row my-3 pagination">
     <div class="col previousPagination">
-        <% if(books.page -1) { %>
-            <a href="<%= paginateUrl %><%= books.page - 1 %>"><< Prev</a>
+        <% if(results.page -1) { %>
+            <a href="<%= paginateUrl %><%= results.page - 1 %>"><< Prev</a>
         <% } %>
     </div>
     <div class="col text-center pagesPagination">
-        <% if(books.pages > 1 && books.docs.length) { %>
-            <% for(let i = 1; i <= books.pages;i++) { %>
+        <% if(results.pages > 1 && results.docs.length) { %>
+            <% for(let i = 1; i <= results.pages;i++) { %>
                 <a href="<%= paginateUrl %><%= i %>"
-                    <%= i === books.page ? 'style=color:#000;' : '' %>
+                    <%= i === results.page ? 'style=color:#000;' : '' %>
                     ><%= i %></a>
             <% } %>
         <% } %>
     </div>
     <div class="col text-right nextPagination">
-        <% if((books.page +1) <= books.pages) { %>
-            <a href="<%= paginateUrl %><%= books.page + 1 %>">Next >></a>
+        <% if((results.page +1) <= results.pages) { %>
+            <a href="<%= paginateUrl %><%= results.page + 1 %>">Next >></a>
         <% } %>
     </div>
 </div>
