--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
                 <div class="col card m-1" id="last-ten">
                     <div class="card-body">
                         <h2 class="card-title">Last 5 read</h2>
-                        <%- include( 'partials/results') %> 
+                        <%#- include( 'partials/results') %> 
                     </div>
                 </div>
             </div>
