--- a/views/partials/book-card.ejs
+++ b/views/partials/book-card.ejs
@@ -1,9 +1,13 @@
 <div class="card m-1 book-card" id="<%#= currentBook.bookId + '-card' %>">
     <div class="card-body">
-        <!-- <img src="" alt="" class="card-img" id="<%#= currentBook.bookId + '-cover' %>"> -->
-        <svg class="bd-placeholder-img card-img" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <rect width="100%" height="100%" fill="#868e96"></rect>
-        </svg>
+        <% let matchedGoogleBook = googleBooks.find(book => book.id === document.book.googleBooksId); %>
+        <% if (typeof matchedGoogleBook !== 'undefined' && typeof matchedGoogleBook.volumeInfo.imageLinks.smallThumbnail !== 'undefined') { %>
+            <img src="<%= matchedGoogleBook.volumeInfo.imageLinks.smallThumbnail %>" alt="<%= matchedGoogleBook.volumeInfo.title %>" class="card-img" id="<%= currentBook.bookId + '-cover' %>">
+        <% } else { %>
+            <svg class="bd-placeholder-img card-img" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <rect width="100%" height="100%" fill="#868e96"></rect>
+            </svg>
+        <% } %>
         <div class="card-img-overlay">
             <h4 class="card-title book-card-title pl-1" id="<%#= currentBook.bookId + '-title' %>">Book Title</h4>
         </div>
