--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
 		<!-- FontAwesome styles and scripts -->
 		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 		<script src="https://kit.fontawesome.com/75e02839f8.js" crossorigin="anonymous"></script>
-		<!-- <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<!-- <link rel="stylesheet" href="/stylesheets/lmdd.css"> -->
     </head>
