Update 'book-card' partial to display thumbnail, title, start/end dates, description snippet, rating, and tag links"

--- a/views/books/all-books.ejs
+++ b/views/books/all-books.ejs
@@ -15,7 +15,7 @@
         <div class="col-9">
             <section class="attribute-group mb-3" id="attribute-one">
                 <%- include('../partials/pagination'); %>
-                <%- include( '../partials/results') %> 
+                <%#- include( '../partials/results') %> 
                 <%- include('../partials/pagination'); %>s
             </section>
         </div>
