--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col card m-1 py-1" id="most-recent">
                     <h2 class="card-title">Current/Most Recent Read</h2>
-                    <%- include( 'partials/book-card') %> 
+                    <%#- include( 'partials/book-card') %> 
                 </div>
             </div>
         </div>
