--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,10 +11,10 @@ img.book-thumbnail {
   max-height:20em;
 }
 
-.book-card-title {
+/* .book-card-title {
   color: #fff;
   background-color: rgba(145, 145, 145, 0.5);
-}
+} */
 
 ul.tags {
   list-style-type: none;
