--- a/views/partials/results.ejs
+++ b/views/partials/results.ejs
@@ -1,5 +1,5 @@
 <div class="card-columns">
     <% for (let document of results.docs) { %>
-        <%- include('book-card', {document}) %> 
+        <%- include('review-card', {document}) %> 
     <% } %>
 </div>
