--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,9 +36,9 @@
 				  </button>
 				  <div class="collapse navbar-collapse" id="navHamburger">
 					<a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
-					<a class="nav-link js-scroll-trigger" href="/books/read?author=<%= currentUser.id %>&resource=Review">Books I've Read</a>
-					<a class="nav-link js-scroll-trigger" href="/books/recommendations?resource=Book">Recommendations</a>
-					<a class="nav-link js-scroll-trigger" href="/books?resource=Book">Browse Books</a>
+					<a class="nav-link js-scroll-trigger" href="/books/read?author=<%= currentUser.id %>&resource=Review&page=1">Books I've Read</a>
+					<a class="nav-link js-scroll-trigger" href="/books/recommendations?resource=Book&page=1">Recommendations</a>
+					<a class="nav-link js-scroll-trigger" href="/books?resource=Book&page=1">Browse Books</a>
 				  </div>
 				</nav>
 			</div>	
