fix: '/books' route without resource type displays 'no results'
changed type of 'resourceType' to 'let' and reassigned it to 'Book' if
no resource type was given in the request.

Set up routes for 'reviews'

--- a/views/partials/results.ejs
+++ b/views/partials/results.ejs
@@ -11,7 +11,7 @@
             <%- include('tag-card', {document}) %> 
             <% break; 
             default: %>
-            <p>No Results for that Resource Type</p>
+            <p>No Resource Type was provided</p>
         <% }; %>
     <% }; %>
 </div>
